FIX-5 :recycle: : jdk 17에 맞게 코드 수정
- collect(toList())에서 toList()로 수정