@@ -11,7 +11,6 @@ import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -50,6 +49,6 @@ public class InvitationService {
     private List<InvitationResponse> getResponseFromInvitation(List<Invitation> invitations) {
         return invitations.stream()
                 .map(InvitationResponse::of)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
